third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/eq/non_eq_field_recursive.rs
#[derive(derive_more::Eq)]
struct IntOrFloat {
    a: Box<NotEq<Self>>,
    b: Box<NotEq<IntOrFloat>>,
}

impl PartialEq for IntOrFloat {
    fn eq(&self, _: &Self) -> bool {
        unimplemented!()
    }
}

#[derive(PartialEq)]
struct NotEq<T>(f32, T);

fn main() {}
